# NeuralNet

./: CMakeLists.txt
DataSets/Iris/: iris.names
src/: Classifiers.cpp  Classifiers.h  main.cpp
src/nnet/: ActivationFunction.cpp  ActivationFunction.h  NNLayer.cpp  NNLayer.h  NeuralNet.cpp  NeuralNet.h  Utils.cpp  Utils.h
src/nnet/LinAlg/: Matrix.cpp  Matrix.h
